# bombe

./: .gitignore  CMakeLists.txt  README.md  bombe.cpp  bombe_pc.txt  bombe_rotor.cpp  bombe_rotor.h  enigma.cpp  enigma.h  rotors_config.txt
cli/: CMakeLists.txt  display.hpp  generate_crib.cpp  main.cpp
config/: machine.toml  settings.toml
core/: CMakeLists.txt
core/include/: bombe.hpp  enigma.hpp  menu.hpp  types.hpp
core/src/: bombe.cpp  enigma.cpp  menu.cpp
deprecated/: bombe_pc.txt  bombe_rotor.cpp
scripts/: build.sh  clean.sh  crack.sh  generate.sh  test.sh
tests/: CMakeLists.txt  test_bombe.cpp  test_enigma.cpp  test_menu.cpp
